# rent-scooter

./: .env.example  .gitignore  CHANGE.md  INSTALL.md  README.md  add_id_number_to_users.py  create_upload_dirs.py  init_db.py  migrate.py  pyproject.toml  run.py  wsgi.py
app/: __init__.py  config.py
app/controllers/: auth_controller.py  banner_controller.py  motorcycle_controller.py  order_controller.py  partner_controller.py  store_controller.py  user_controller.py
app/models/: __init__.py  banner.py  motorcycle.py  order.py  partner.py  reservation.py  store.py  user.py
app/static/css/: backend.css  frontend.css
app/templates/: app.html  base.html
app/templates/admin/: base.html  dashboard.html  profile.html
app/templates/auth/: login.html
app/templates/errors/: 403.html  404.html  500.html
app/templates/frontend/: index.html  login.html  orders.html  profile.html  store_detail.html
app/utils/: decorators.py  error_handlers.py  id_validator.py  image_processor.py  timezone_utils.py  validators.py  websocket_events.py
app/views/: auth.py  backend.py  frontend.py
app/views/admin/: banners.py  motorcycles.py  orders.py  partners.py  stores.py  users.py
migrations/: env.py
migrations/versions/: 678447775629_add_banner_name_and_subtitle_to_banners.py  8e8f12ad5f5e_add_partner_id_to_stores.py  add_renter_info_to_orders.py  add_reservation_to_motorcycles.py  add_reservations_table.py  c78860628ed7_add_image_path_to_stores.py
static/css/: backend.css  frontend.css  style.css
static/js/: backend_common.js  socketio_client.js
(+24 files in other folders)
